<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_card_img"
        android:layout_width="@dimen/itemBooks_Lwidth"
        android:layout_height="@dimen/itemBooks_Lheight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tbate"
        tools:srcCompat="@drawable/tbate" />

    <TextView
        android:id="@+id/tv_card_title"
        android:layout_width="289dp"
        android:layout_height="53dp"
        android:paddingVertical="10dp"
        android:text="@string/tv_card_title"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/iv_card_img"
        app:layout_constraintTop_toBottomOf="@+id/iv_card_img" />

    <TextView
        android:id="@+id/tv_card_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_card_day"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/iv_card_img"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_title" />

    <TextView
        android:id="@+id/tv_card_chapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_card_chapter"
        android:textColor="#000000"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/iv_card_img"
        app:layout_constraintTop_toBottomOf="@+id/tv_card_title" />

    <Button
        android:id="@+id/btn_card_title_go"
        android:layout_width="61dp"
        android:layout_height="53dp"
        android:text="@string/btn_card_title_go"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/tv_card_title"
        app:layout_constraintEnd_toEndOf="@+id/iv_card_img"
        app:layout_constraintTop_toBottomOf="@+id/iv_card_img"
        android:background="@color/seed"
        />

</androidx.constraintlayout.widget.ConstraintLayout>