<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="16dp"
    app:cardCornerRadius="15dp"
    app:cardBackgroundColor="@color/white"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_news_card_img"
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_marginHorizontal="10dp"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/tbate"
            tools:srcCompat="@drawable/tbate" />

        <TextView
            android:id="@+id/tv_news_card_title"
            android:layout_width="226dp"
            android:layout_height="74dp"
            android:paddingVertical="10dp"
            android:text="@string/tv_card_title"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/iv_news_card_img"
            app:layout_constraintTop_toBottomOf="@+id/iv_news_card_img" />

        <TextView
            android:id="@+id/tv_news_card_day"
            android:layout_width="295dp"
            android:layout_height="46dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/tv_news_card_description"
            android:textColor="#000000"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@+id/iv_news_card_img"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/iv_news_card_img"
            app:layout_constraintTop_toBottomOf="@+id/tv_news_card_title" />

        <TextView
            android:id="@+id/tv_news_card_title_go"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginTop="1dp"
            android:background="@color/black"
            android:padding="10dp"
            android:text="@string/btn_news_card_title_go"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tv_news_card_title"
            app:layout_constraintEnd_toEndOf="@+id/iv_news_card_img"
            app:layout_constraintTop_toBottomOf="@+id/iv_news_card_img"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>